# nomad-langchain-django

./: db.sqlite3  manage.py  pyproject.toml
common/: models.py
config/: authentication.py  settings.py  urls.py
tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0003_like.py  0004_alter_like_tweet_alter_like_user_alter_tweet_users.py  0005_rename_users_tweet_user.py
tweets/templates/: all_tweets.html  tweet_detail.html
users/: serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
